--- a/3.2p/public/index.html
+++ b/3.2p/public/index.html
@@ -18,7 +18,7 @@
     <nav>
       <div class="nav-wrapper navbar-size">
         <!-- <a href="#" class="brand-logo">Logo</a> -->
-        <a href="#" class="brand-logo"><img class="user-image-size"  />Logo</a>
+        <a href="#" class="brand-logo"><img class="user-image-size"  />Ankit SIT725</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a></li>
           <li><a href="#">Page 1</a></li>
@@ -29,8 +29,8 @@
     </nav>
     <div id="modal1" class="modal">
       <div class="modal-content">
-        <h4>Modal Header</h4>
-        <p>A bunch of text</p>
+        <h4>This is the Modal Header Text</h4>
+        <p>This is the body of the Modal</p>
       </div>
       <div class="modal-footer">
         <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
